--- a/latex/main.tex
+++ b/latex/main.tex
@@ -867,7 +867,7 @@ Accot og Zhai argumenterer i \cite{accot1997} for, at $ID$ for en navigationsopg
 ID_s = \int_{2\pi}^{2\pi(n+1)}\frac{\sqrt{\left(\theta+w\right)^6+9\left(\theta+w\right)^4}}{\left(\theta+2\pi+2\right)^3-\left(\theta+w\right)^3}d\theta
 \end{align*}
 
-For vores spiralopgaver gjorde vi brug af $n=[1,2,3,4]$ og en bredde $w=[3.1,3.1,3.1,3.05]$. For hver testperson i vores kontrollerede eksperiment har vi tilpasset deres tid $T$ og de fire udregnede $ID_s$ med lineær regression. Figur \ref{fig:spiralingtest1} og \ref{fig:spiralingtest2} viser de affine modellers tilpasning til de fire datapunkter for hhv. testperson 2 og 10. Det kan bemærkes, hvordan kurven er monotont voksende, hvilket stemmer overens med forventningen om, at det tager længere tid at gennemføre en opgave, hvis sværhedsgraden, $ID$, bliver højere. I modsætning til tunnelopgaven var der ingen af testpersonerne i den kontrollerede forsøg, som blev hurtigere ved sværere $ID$.\\\\
+For vores spiralopgaver gjorde vi brug af $n=[1,2,3,4], w=[3.1,3.1,3.1,3.05]$. For hver testperson i vores kontrollerede eksperiment har vi tilpasset deres tid $T$ og de fire udregnede $ID_s$ med lineær regression. Figur \ref{fig:spiralingtest1} og \ref{fig:spiralingtest2} viser de affine modellers tilpasning til de fire datapunkter for hhv. testperson 2 og 10. Det kan bemærkes, hvordan kurven er monotont voksende, hvilket stemmer overens med forventningen om, at det tager længere tid at gennemføre en opgave, hvis sværhedsgraden, $ID$, bliver højere. I modsætning til tunnelopgaven var der ingen af testpersonerne i den kontrollerede forsøg, som blev hurtigere ved sværere $ID$.\\\\
 \begin{minipage}{\linewidth}
 	\begin{minipage}[b]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_test_spiraling_1}
