--- a/latex/main.tex
+++ b/latex/main.tex
@@ -885,7 +885,7 @@ For vores spiralopgaver gjorde vi brug af $n=[1,2,3,4], w=[3.1,3.1,3.1,3.05]$. F
 \end{minipage}
 
 \newpage
-Ved at tilpasse Accot og Zhai's $ID_s$ til vores 264 testdeltageres spiralopgavedata fandt vi frem til den matematiske model i (\ref{eq:accotspiral}). Det kan bemærkes, at de to konstante led for denne model er markant anderledes end de tilsvarende for de fire andre formuleringer.  AIC-analyserne i tabel \ref{tab:table_analysis_aic_spiral_all} og \ref{tab:table_analysis_aic_spiral_mean} viser, hvordan Accot og Zhai's formulering klarer sig væsentligt bedre end de fire andres. Det gælder både for alle datapunkterne og for gennemsnitsværdierne. Dette er også, hvad vi forventede, da de formuleringer ikke er beregnet til denne type navigationsopgaver, imens Accot og Zhai's er tiltænkt specifikt til denne type.
+Ved at tilpasse Accot og Zhai's $ID_s$ til vores 264 testdeltageres spiralopgavedata fandt vi frem til den matematiske model i (\ref{eq:accotspiral}). Det kan bemærkes, at de to konstante led for denne model er markant anderledes end de tilsvarende for de fire andre formuleringer.  AIC-analyserne i tabel \ref{tab:table_analysis_aic_spiral_all} og \ref{tab:table_analysis_aic_spiral_mean} viser, hvordan Accot og Zhai's formulering klarer sig væsentligt bedre end de fire andres. Det gælder både for alle datapunkterne og for gennemsnitsværdierne. Dette er også, hvad vi forventede, da de fire originale formuleringer ikke er beregnet til denne type navigationsopgaver, imens Accot og Zhai's er tiltænkt specifikt til denne type.
 \begin{align}
 \text{Accot \& Zhai: } T = 2097.09+553.25 \cdot \int_{2\pi}^{2\pi(n+1)}\frac{\sqrt{\left(\theta+w\right)^6+9\left(\theta+w\right)4}}{\left(\theta+2\pi+2\right)^3-\left(\theta+w\right)^3}d\theta
 \label{eq:accotspiral}
