--- a/latex/main.tex
+++ b/latex/main.tex
@@ -920,8 +920,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 		\captionof{table}{AIC-værdier for gennemsnittet af tiderne for de 264 testdeltageres spiralopgaver ved hvert $ID$. Deres indbyrdes forskel er beregnet med udgangspunkt i Accot \& Zhai's formulering som nulpunkt}
 		\label{tab:table_analysis_aic_spiral_mean}
 	\end{minipage}
-\end{minipage}
-
+\end{minipage}\\\\
 \begin{minipage}{\linewidth}
 	\begin{minipage}[t]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_welford}
