--- a/latex/main.tex
+++ b/latex/main.tex
@@ -769,7 +769,7 @@ Af graferne ser det ud til, at Welford's formulering er markant dårligere til a
 \begin{minipage}[t]{\linewidth} 
 	\begin{minipage}[t]{0.45\linewidth}
 			\begin{tabular}{lll}
-				Model & AIC værdi & Forskel\\\hline
+				Model & AIC-værdi & Forskel\\\hline
 				Meyer & 20549.61 & 0 \\
 				Accot \& Zhai & 20549.62 & 0.01\\
 				MacKenzie & 20549.68 & 0.07 \\
@@ -784,7 +784,7 @@ Af graferne ser det ud til, at Welford's formulering er markant dårligere til a
 	\end{minipage}
 	\begin{minipage}[t]{0.45\linewidth}
 			\begin{tabular}{lll}
-				Model & AIC værdi & Forskel\\\hline
+				Model & AIC-værdi & Forskel\\\hline
 				Meyer & 33.68 & 0 \\
 				Accot \& Zhai & 38.17 & 4.49\\
 				MacKenzie & 46.58 & 12.9 \\
@@ -895,7 +895,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 \begin{minipage}[t]{\linewidth}
 	\begin{minipage}[t]{0.45\linewidth}
 		\begin{tabular}{lll}
-			Model & AIC værdi & Forskel\\\hline
+			Model & AIC-værdi & Forskel\\\hline
 			Accot \& Zhai & 20225.67 & 0\\
 			Meyer & 20240.39 & 14.72 \\
 			MacKenzie & 20256.62 & 30.95\\
@@ -910,7 +910,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 	\end{minipage}
 	\begin{minipage}[t]{0.45\linewidth}
 		\begin{tabular}{lll}
-			Model & AIC værdi & Forskel\\\hline
+			Model & AIC-værdi & Forskel\\\hline
 			Accot \& Zhai & 61.91 & 0\\
 			Meyer & 68.12 & 6.21 \\
 			MacKenzie & 70.66 & 8.75\\
