--- a/latex/main.tex
+++ b/latex/main.tex
@@ -924,7 +924,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 \begin{minipage}{\linewidth}
 	\begin{minipage}[t]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_welford}
-		\captionof{figure}{Welford's lineære model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{Welford's lineære model til gennemsnitstiden per $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:welford_spiral_line}
 	\end{minipage}
 	\begin{minipage}[b]{0.1\linewidth}
@@ -932,14 +932,14 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 	\end{minipage}
 	\begin{minipage}[t]{0.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_fitt}
-		\captionof{figure}{Fitts' affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{Fitts' affine model til gennemsnitstiden per $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:fitt_spiral_line}
 	\end{minipage}
 \end{minipage}
 \begin{minipage}{\linewidth}
 	\begin{minipage}[t]{.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_meyer}
-		\captionof{figure}{Meyer's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{Meyer's affine model til gennemsnitstiden per $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:meyer_spiral_line}
 	\end{minipage}
 	\begin{minipage}[b]{0.1\linewidth}
@@ -947,7 +947,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 	\end{minipage}
 	\begin{minipage}[t]{0.45\linewidth}
 		\includegraphics[width=\textwidth]{images/plots/plot_model_spiral_mackenzie}
-		\captionof{figure}{MacKenzie's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{MacKenzie's affine model til gennemsnitstiden per $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:mackenzie_spiral_line}
 	\end{minipage}
 \end{minipage}
@@ -955,7 +955,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 	\begin{minipage}[t]{\linewidth}
 		\centering
 		\includegraphics[width=0.5\textwidth]{images/plots/plot_model_spiral_accot}
-		\captionof{figure}{Accot \& Zhai's affine model til gennemsnitstiden pr. $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
+		\captionof{figure}{Accot \& Zhai's affine model til gennemsnitstiden per $ID$, med $ID$ på $x$-aksen og tiden $T$ på $y$-aksen}
 		\label{fig:accot_spiral_line}
 	\end{minipage}
 \end{minipage}
@@ -963,7 +963,7 @@ Ligesom for vores tunnelopgaver har vi valgt at visualisere de fem modellers til
 \newpage
 \addcontentsline{toc}{section}{modelanalyse af hastighedsprofiler}
 \section*{Modelanalyse af hastighedsprofiler}
-Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvalitativ analyse. Vi vil gennemgå testdeltagernes bevægelsesbaner for pegeopgaverne, for at finde eventuelle tendenser, som vi kan opstille hypoteser ud fra. Hypoteserne vil vi forsøge, at be- eller afkræfte ved statistik, beregninger og testdeltagernes spørgeskemasvar i en efterfølgende kvantitativ analyse.
+Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvalitativ analyse. Vi vil gennemgå testdeltagernes bevægelsesbaner for pegeopgaverne, for at finde eventuelle tendenser, som vi kan opstille hypoteser ud fra. Hypoteserne vil vi forsøge, at be- eller afkræfte i en efterfølgende kvantitativ analyse.
 
 \addcontentsline{toc}{subsection}{Kvalitativ analyse}
 \subsection*{Kvalitativ analyse}
