--- a/latex/main.tex
+++ b/latex/main.tex
@@ -978,7 +978,7 @@ På baggrund af de observerede tendenser har vi fundet frem til to hypoteser, so
 	\begin{minipage}{.45\linewidth}
 		\centering
 		\includegraphics[width=\linewidth]{images/plots/plot_analysis_qualitative_140}
-		\captionof{figure}{Plot over alle bevægelsesbaner lavet af testdeltager 140 under udførslen af denne deltagers pegeopgaver.}
+		\captionof{figure}{Plot over alle bevægelsesbaner lavet af testdeltager 140 under udførslen af denne deltagers pegeopgaver}
 		\label{fig:movement_random_person_1}
 	\end{minipage}
 	\begin{minipage}[b]{0.1\linewidth}
