--- a/latex/main.tex
+++ b/latex/main.tex
@@ -967,7 +967,7 @@ Vores modelanalyse af hastighedsprofiler tager udgangspunkt i en kvalitativ anal
 
 \addcontentsline{toc}{subsection}{Kvalitativ analyse}
 \subsection*{Kvalitativ analyse}
-Den kvalitative analyse baserer sig på 22 tilfældigt udvalgte crowdsourcingdeltagere. De 22 testdeltagere er valgt med en tilfældighedsgenerator og har følgende id'er i databasen; $3,45,72,77,78,113,114,140$ $151,154,161,166,170,171,176,219,226,235,239,248,257,263$. Vi har plottet testdeltagernes bevægelsesbaner for alle deres pegeopgaver, hvilket gør det muligt at se sammenhænge imellem testdeltagerne. Figur \ref{fig:movement_random_person_1} og \ref{fig:movement_random_person_2} viser hvert ét eksempel på en testdeltagers bevægelsesbaner. De resterende 20 plots kan ses i bilag \ref{sec:movementlines}. Bevægelsesbaner med et højt $ID$ er mørkeblå, i mens bevægelsesbaner med et lavt $ID$ er lyseblå.
+Den kvalitative analyse baserer sig på 22 tilfældigt udvalgte crowdsourcingdeltagere. De 22 testdeltagere er valgt med en tilfældighedsgenerator og har følgende id'er i databasen; $3,45,72,77,78,113,114,140$ $151,154,161,166,170,171,176,219,226,235,239,248,257,263$. Vi har plottet testdeltagernes bevægelsesbaner for alle deres pegeopgaver, hvilket gør det muligt at se sammenhænge imellem testdeltagerne. Figur \ref{fig:movement_random_person_1} og \ref{fig:movement_random_person_2} viser hvert ét eksempel på en testdeltagers bevægelsesbaner. De resterende 20 plots kan ses i bilag \ref{sec:movementlines}. Bevægelsesbaner med et højt $ID$ er mørkeblå, mens bevægelsesbaner med et lavt $ID$ er lyseblå.
 
 Vi ser en tendens til, at testdeltagerne bruger én primær underbevægelse for at komme hen mod målet, efterfulgt af én eller flere korrigerende mindre underbevægelser for at ramme målet. Der er en tendens til, at bevægelser i opgaver med højere $ID$ vil have flere korrigerende underbevægelser end bevægelser i opgaver med lavere $ID$. 
 
