--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1006,7 +1006,7 @@ For at finde ud af, om vores 22 tilfældigt udvalgte testpersoner er repræsenta
 		                &                   & $15-40$ timer: \hfill22\% & $15-40$ timer: \hfill24\% &                     &\\
 		                &                   & $>40$ timer: \hfill3\%    & $>40$ timer: \hfill71\%   &                     &
 	\end{tabular}
-	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet.}
+	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet}
 	\label{tab:persons_average}
 \end{table}
 
@@ -1020,7 +1020,7 @@ For at finde ud af, om vores 22 tilfældigt udvalgte testpersoner er repræsenta
 		                 &                      & $15-40$ timer: \hfill9\% & $15-40$ timer: \hfill32\% &                        &                      \\
 		                 &                      & $>40$ timer: \hfill5\%   & $>40$ timer: \hfill68\%   &                        &
 	\end{tabular}
-	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet.}
+	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet}
 	\label{tab:sample_persons_average}
 \end{table}
 
