--- a/latex/main.tex
+++ b/latex/main.tex
@@ -994,7 +994,7 @@ På baggrund af de observerede tendenser har vi fundet frem til to hypoteser, so
 
 \addcontentsline{toc}{subsection}{Kvantitativ analyse}
 \subsection*{Kvantitativ analyse}
-For at finde ud af, om vores 22 tilfældigt udvalgte testpersoner er repræsentative for resten af testdeltagerne, har vi valgt at undersøge deres spørgeskemasvar. De procentvise fordelinger af grupperingerne i køn, pegeenhed med mere for alle testdeltagere, har vi udregnet og opstillet I tabel \ref{tab:persons_average}. Tilsvarende har vi gjort i tabel \ref{tab:sample_persons_average} med data fra vores 22 udvalgte testdeltagere. Ved sammenligning af dataene i de to tabeller, finder vi vores 22 testdeltagere repræsentative for vores datasæt.
+For at finde ud af, om vores 22 tilfældigt udvalgte testpersoner er repræsentative for resten af testdeltagerne, har vi valgt at undersøge deres spørgeskemasvar. De procentvise fordelinger af grupperingerne i køn, pegeenhed med mere for alle testdeltagere, har vi udregnet og opstillet i tabel \ref{tab:persons_average}. Tilsvarende har vi gjort i tabel \ref{tab:sample_persons_average} med data fra vores 22 udvalgte testdeltagere. Ved sammenligning af dataene i de to tabeller, finder vi vores 22 testdeltagere repræsentative for vores datasæt.
 
 \begin{table}[h]
 	\centering
@@ -1006,7 +1006,7 @@ For at finde ud af, om vores 22 tilfældigt udvalgte testpersoner er repræsenta
 		                &                   & $15-40$ timer: \hfill22\% & $15-40$ timer: \hfill24\% &                     &\\
 		                &                   & $>40$ timer: \hfill3\%    & $>40$ timer: \hfill71\%   &                     &
 	\end{tabular}
-	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet}
+	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testdeltagerne valg i spørgeskemaet}
 	\label{tab:persons_average}
 \end{table}
 
@@ -1020,7 +1020,7 @@ For at finde ud af, om vores 22 tilfældigt udvalgte testpersoner er repræsenta
 		                 &                      & $15-40$ timer: \hfill9\% & $15-40$ timer: \hfill32\% &                        &                      \\
 		                 &                      & $>40$ timer: \hfill5\%   & $>40$ timer: \hfill68\%   &                        &
 	\end{tabular}
-	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af testpersoners valg i spørgeskemaet}
+	\caption{Tabel med oversigt over gennemsnitsværdier og fordeling af de 22 testdeltageres valg i spørgeskemaet}
 	\label{tab:sample_persons_average}
 \end{table}
 
