--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1028,15 +1028,14 @@ For at undersøge vores hypoteser fra den kvalitative analyse har vi lavet fartp
 
 Figur \ref{fig:speed_distance_testperson_140} og \ref{fig:speed_distance_testperson_248} er eksempler på farten i forhold til den tilbagelagte afstand, imens figur \ref{fig:speed_time_testperson_140} og \ref{fig:speed_time_testperson_248} er farten i forhold til den forløbne tid. Otte af de resterende plots kan ses i bilag \ref{sec:speed_plots}. Grunden til, at vi har valgt at medtage fartprofiler i forhold til både distance og tid er, at det giver os et mere nuanceret billede af, vores testpersoners bevægelse. Vi bemærker, hvordan graferne i figurerne generelt udviser en stigning fra starten af opgaven til et globalt maksimum, hvorefter farten aftager og nærmer sig 0. Dette er et tegn på én primær underbevægelse, da deltageren næsten stopper bevægelsen. Længden på denne underbevægelse varierer fra 40 til 300 pixels og farten ligger imellem 0 og 8 pixels per millisekund.
 
-Grafen vil efter aftagningen foretage nul eller flere stigninger til lokale maksimum, som kan betegnes som korrigerende underbevægelser. Dette bekræfter derfor vores hypotese om, at testpersonerne har én primær underbevægelse efterfulgt af korrigerende underbevægelser, hvilket også er beskrevet tidligere i rapporten. Ydermere bemærker vi, at graferne for opgaver med høje $ID$ viser flere korrigerende underbevægelser end graferne for opgaver med lavere $ID$.
+Grafen vil efter aftagningen foretage nul eller flere stigninger til lokale maksimum, som kan betegnes som korrigerende underbevægelser. Dette bekræfter derfor vores hypotese om, at testpersonerne har én primær underbevægelse efterfulgt af et antalt korrigerende underbevægelser, hvilket også er beskrevet tidligere i rapporten. Ydermere bemærker vi, at graferne for opgaver med højere $ID$ viser flere korrigerende underbevægelser end graferne for opgaver med lavere $ID$.
 
-Som tidligere nævnt i rapporten, har de fire formuleringer af Fitts' lov et additivt led, som beskriver reaktionstiden for testdeltagerne. Disse værdier varierede fra 300 til 500 millisekunder, hvilket stemmer overens med graferne i figur \ref{fig:speed_time_testperson_140} og \ref{fig:speed_time_testperson_248}, her starter deltagerne også først efter 200 til 500 millisekunder. Bemærk, at grafen på nogle af figurerne allerede starter omkring tiden 0 og fortsætter med en fart på 0, dette skyldes, at testdeltageren har bevæget sin pegeenhed på samme tid med, at deltageren klikkede for at starte opgaven. Derved er der blevet registreret et datapunkt, dog uden, at testdeltageren egentlig er startet med at manøvrere imod målet. Udover dette noterer vi os, at graferne udviser de samme egenskaber for både distance og tid.
-
+Som tidligere nævnt i rapporten, har de fire formuleringer af Fitts' lov et additivt led, som beskriver reaktionstiden for testdeltagerne. Disse værdier varierede fra 300 til 500 millisekunder, hvilket stemmer overens med graferne i figur \ref{fig:speed_time_testperson_140} og \ref{fig:speed_time_testperson_248}. Her starter deltagerne også først efter 200 til 500 millisekunder. Bemærk, at grafen på nogle af figurerne allerede starter omkring tiden 0 og fortsætter med en fart på 0, dette skyldes, at testdeltageren har bevæget sin pegeenhed på samme tid med, at deltageren klikkede for at starte opgaven. Derved er der blevet registreret et datapunkt, dog uden, at testdeltageren egentlig er startet med at manøvrere imod målet. Udover dette noterer vi os, at graferne udviser de samme egenskaber for både distance og tid.\\\\
 \begin{minipage}{\linewidth}
 \begin{minipage}{.475\linewidth}
 	\centering
 	\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_140}
-	\captionof{figure}{Plot af testdeltager 140's fart i forhold til den tilbagelagte distance på opgaverne 20, 23, 8 og 22.}
+	\captionof{figure}{Plot af testdeltager 140's fart i forhold til den tilbagelagte distance på opgaverne 20, 23, 8 og 22}
 	\label{fig:speed_distance_testperson_140}
 	\end{minipage}
 	\begin{minipage}[b]{0.05\linewidth}
@@ -1045,7 +1044,7 @@ Som tidligere nævnt i rapporten, har de fire formuleringer af Fitts' lov et add
 	\begin{minipage}{.475\linewidth}
 		\centering
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_individual_248}
-		\captionof{figure}{Plot af testdeltager 248's fart i forhold til den tilbagelagte distance på opgaverne 20, 23, 8 og 22.}
+		\captionof{figure}{Plot af testdeltager 248's fart i forhold til den tilbagelagte distance på opgaverne 20, 23, 8 og 22}
 		\label{fig:speed_distance_testperson_248}
 	\end{minipage}
 \end{minipage}
@@ -1054,7 +1053,7 @@ Som tidligere nævnt i rapporten, har de fire formuleringer af Fitts' lov et add
 \begin{minipage}{.475\linewidth}
 	\centering
 	\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_140}
-	\captionof{figure}{Plot af testdeltager 140's fart i forhold til den forløbne tid på opgaverne 20, 23, 8 og 22.}
+	\captionof{figure}{Plot af testdeltager 140's fart i forhold til den forløbne tid på opgaverne 20, 23, 8 og 22}
 	\label{fig:speed_time_testperson_140}
 	\end{minipage}
 	\begin{minipage}[b]{0.05\linewidth}
@@ -1063,7 +1062,7 @@ Som tidligere nævnt i rapporten, har de fire formuleringer af Fitts' lov et add
 	\begin{minipage}{.475\linewidth}
 		\centering
 		\includegraphics[width=\linewidth]{images/plots/plot_speed_time_individual_248}
-		\captionof{figure}{Plot af testdeltager 248's fart i forhold til den forløbne tid på opgaverne 20, 23, 8 og 22.}
+		\captionof{figure}{Plot af testdeltager 248's fart i forhold til den forløbne tid på opgaverne 20, 23, 8 og 22}
 		\label{fig:speed_time_testperson_248}
 	\end{minipage}
 \end{minipage}
