--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1068,13 +1068,11 @@ Som tidligere nævnt i rapporten, har de fire formuleringer af Fitts' lov et add
 \end{minipage}\\\\
 Udover analyse af testdeltagernes fart, så har vi også valgt at lave hastighedsprofiler for fire opgaver for fire tilfældigt udvalgte personer. De fire opgaver er, ligesom fartprofilerne, opgave $20$, $23$, $8$ og $22$, da de har de laveste og højeste $ID$. Hastighedsprofilerne er lavet, både med retning mod næste punkt og med retning mod slutpunktet. Dette er gjort, for at se om der er en sammenhæng mellem hastigheden til næste punkt, eller målet, og tiden det tager at udføre en opgave. De 16 plots ses i bilag \ref{sec:velocity_plots}, mens figur \ref{fig:plot_velocity_individual} og \ref{fig:plot_velocity_individual_target} visualisere henholdsvis ét plot med hastighedsvektorer mod næste punkt og ét plot med hastighedsvektorer mod slutpunktet. Figur \ref{fig:plot_velocity_individual} og \ref{fig:plot_velocity_individual_target} er taget fra en tilfældig opgave fra en tilfældig testdeltager, udelukkende for at visualisere plots med pænere tendenser. 
 
-Vektorerne i bilag \ref{sec:velocity_plots} udviser ingen generelle tendenser. Det ser ud til at være tilfældigt hvilke vektorer som er store og hvilke som er små. Derfor kan vi ikke se nogen sammenhæng mellem hastighedsprofiler og Fitts' lov. 
-
-
+Vektorerne i bilag \ref{sec:velocity_plots} udviser ingen generelle tendenser. Det ser ud til at være tilfældigt hvilke vektorer som er store og hvilke som er små. Derfor kan vi ikke se nogen sammenhæng mellem hastighedsprofiler og Fitts' lov.\\\\
 \begin{minipage}{\linewidth}
 	\begin{minipage}{.45\linewidth}
 		\includegraphics[width=\linewidth, trim = 20cm 0cm 20cm 0cm, clip]{images/plots/plot_velocity_individual}
-		\captionof{figure}{Vektorplot over hastighedsprofilen for en tilfældig testdeltager.}
+		\captionof{figure}{Vektorplot over hastighedsprofilen for en tilfældig testdeltager}
 		\label{fig:plot_velocity_individual}
 	\end{minipage}
 	\begin{minipage}[b]{0.1\linewidth}
@@ -1082,7 +1080,7 @@ Vektorerne i bilag \ref{sec:velocity_plots} udviser ingen generelle tendenser. D
 	\end{minipage}
 	\begin{minipage}{.45\linewidth}
 		\includegraphics[width=\linewidth, trim = 20cm 0cm 20cm 0cm, clip]{images/plots/plot_velocity_individual_target}
-		\captionof{figure}{Vektorplot over hastighedsprofilen mod målet for en tilfældig testdeltager.}
+		\captionof{figure}{Vektorplot over hastighedsprofilen mod målet for en tilfældig testdeltager}
 		\label{fig:plot_velocity_individual_target}
 	\end{minipage}
 \end{minipage}
