--- a/latex/main.tex
+++ b/latex/main.tex
@@ -387,7 +387,7 @@ Når testpersonen passerer slutstregen af tunnellen vil opgaven stoppe, og der v
 	\captionof{figure}{Skærmbillede af den fjerde spiralopgave}
 	\label{fig:ex_spiral_4}
 \end{minipage}\\\\
-I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, de er skaleret cirka 80\% ned, men deres indbyrdes relative forholdet er bevaret. Antallet af vindinger i spiralen og bredden af spiraltunellerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindinger på spiralerne er taget fra \cite{accot1997}.
+I denne opgave skal testdeltageren føre sin markør gennem fire spiraler af varierende størrelse, og med varierende antal vindinger. De fire spiraler kan ses på figur \ref{fig:ex_spiral_1}, \ref{fig:ex_spiral_2}, \ref{fig:ex_spiral_3} og \ref{fig:ex_spiral_4}, de er skaleret cirka 80\% ned, men deres indbyrdes relative forholdet er bevaret. Antallet af vindinger i spiralen og bredden af spiraltunnellerne er vist i tabel \ref{tab:spiralopgave}. Antallet af vindinger på spiralerne er taget fra \cite{accot1997}.
 \begin{center}
 	\begin{tabular}{c c c}
 		Spiral & A & W \\
@@ -1106,7 +1106,7 @@ Vi vil i dette afsnit diskutere vores fremgangsmåde og resultater fra både vor
 	\label{tab:fordeleogulemper}
 \end{wrapfigure}
 
-Vi valgte at opdele vores forsøg i to dele; et kontrolleret laboratorieeksperiment, og et ukontrolleret crowdsourcingeksperiment. Opdelingen blev lavet for at sikre, at vi havde nogle kontrollerede data som vi kunne bruge til at måle kvaliteten af vores ukontrollerede data. Ifølge \cite{liu2012crowdsourcing} er der fordele ved både laboratorieforsøg, og ved crowdsourcing - disse ses i tabel \ref{tab:fordeleogulemper} som illustrerer det fra et crowdsourcing perspektiv. Den lavere kvalitet af feedback, og den manglende interaktion med deltagerne fremhæver vigtigheden af at udføre et laboratorieeksperiment, hvor disse problemer netop ikke vil være til stede\cite{liu2012crowdsourcing}. Det kan derfor diskuteres om vores 10 personer til det kontrollerede laboratorieforsøg er tilstrækkeligt, eller om vi burde have haft en større mængde deltagere, og sikret os en større mængde data af højere kvalitet. Derudover ville det også have givet os en mulighed for at finde flere folk fra en mere varieret målgruppe til at sammenligne crowdsourcingdata med.
+Vi valgte at opdele vores forsøg i to dele; et kontrolleret laboratorieeksperiment, og et ukontrolleret crowdsourcingeksperiment. Opdelingen blev lavet for at sikre, at vi havde nogle kontrollerede data som vi kunne bruge til at måle kvaliteten af vores ukontrollerede data med. Ifølge \cite{liu2012crowdsourcing} er der fordele ved både laboratorieforsøg, og ved crowdsourcing - disse ses i tabel \ref{tab:fordeleogulemper} som illustrerer det fra et crowdsourcing perspektiv. Den lavere kvalitet af feedback, og den manglende interaktion med deltagerne fremhæver vigtigheden af at udføre et laboratorieeksperiment, hvor disse problemer netop ikke vil være til stede \cite{liu2012crowdsourcing}. Det kan derfor diskuteres om vores 10 personer til det kontrollerede laboratorieforsøg er tilstrækkeligt, eller om vi burde have haft en større mængde deltagere, og sikret os en større mængde data af højere kvalitet. Derudover ville det også have givet os en mulighed for at finde flere folk fra en mere varieret målgruppe til at sammenligne crowdsourcingdata med.
 
 Fordelene ved at bruge crowdsourcing taler dog klart for også at gøre brug af dette. Dog bliver der refereret til services som Amazon Mechanical Turk og CrowdFlower \cite{liu2012crowdsourcing}, der begge er betalingsservices, hvilket har nogle andre fordele og ulemper end vores valg af frivillige testdeltagere. De lave omkostninger, og den hurtige udførsel taler for at vælge betalingsservices, og ville have sikret os en større mængde data. Men vi kan ikke sige om kvaliteten af data havde været bedre, da der ved betalt crowdsourcing bliver et incitament til at gennemføre opgaverne hurtigere grundet Amazon Mechanical Turks betaling per gennemført opgave \cite{liu2012crowdsourcing}.
 
@@ -1162,7 +1162,7 @@ Modsat vores tunnelopgave analyse så viste spiralopgaverne store forskelle i me
 
 Alle forskellene i tabel \ref{tab:table_analysis_aic_spiral_all} er større end 10, og vi kan derfor konkludere, at Accot og Zhai's formulering beskriver vores data bedre end de fire andre formuleringer. Dette er præcis, hvad vi forventede, da deres $ID$ er bestemt specifikt for denne type opgave. Ligesom for tunnelopgaverne gjorde vi kun brug af 4 i stedet for 16 opgaver, hvilket gør datasættet væsentligt mindre og måske endda for lille. I modsætning til tunnelopgaverne så har spiralopgavernes størrelser mere indflydelse på tiden. Hvis spiralen bliver større eller snævrere tager det længere tid for alle testdeltagerene at gennemføre. Sammenligningen med de fire originale formuleringer af Fitts' lov er dog svær at drage yderligere konklusioner ud fra. De motoriske analyser som de bygger på, med én hovedbevægelse efterfulgt af én eller flere underbevægelser er formentligt ikke tilfældet for spiralopgaven.
 
-I forhold til vores konstanter $a$ og $b$ og Accot og Zhai's, så er der igen en væsentlig forskel, de fik $a=115$ og $b=169$, imens vores værdier er på $a=2097.09$ og $b=553.25$. Det er svært at diskutere i yderlighed, hvad denne forskel betyder, da vi kun har brugt 4 spiralopgaver imens de brugte 16.
+I forhold til vores konstanter $a$ og $b$ og Accot og Zhai's, så er der igen en væsentlig forskel, de fik $a=115$ og $b=169$, imens vores værdier er på $a=2097.09$ og $b=553.25$. Det er svært at diskutere i yderlighed, hvad denne forskel betyder, da vi kun har brugt 4 spiralopgaver imens de brugte 16, og endvidere har vi heller ikke brugt den samme værdi, $w$, for bredden af spiraltunnellerne, dette skyldes, at vi ikke fik vores programmel til at tegne spiraller ved hjælp af polære koordinater ligesom Accot og Zhai har gjort det.
 
 \addcontentsline{toc}{chapter}{Konklusion}
 \chapter*{Konklusion}
