--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1108,7 +1108,7 @@ Vi vil i dette afsnit diskutere vores fremgangsmåde og resultater fra både vor
 
 Vi valgte at opdele vores forsøg i to dele; et kontrolleret laboratorieeksperiment, og et ukontrolleret crowdsourcingeksperiment. Opdelingen blev lavet for at sikre, at vi havde nogle kontrollerede data som vi kunne bruge til at måle kvaliteten af vores ukontrollerede data med. Ifølge \cite{liu2012crowdsourcing} er der fordele ved både laboratorieforsøg, og ved crowdsourcing - disse ses i tabel \ref{tab:fordeleogulemper} som illustrerer det fra et crowdsourcing perspektiv. Den lavere kvalitet af feedback, og den manglende interaktion med deltagerne fremhæver vigtigheden af at udføre et laboratorieeksperiment, hvor disse problemer netop ikke vil være til stede \cite{liu2012crowdsourcing}. Det kan derfor diskuteres om vores 10 testdeltagere til det kontrollerede laboratorieforsøg er tilstrækkeligt, eller om vi burde have haft en større mængde deltagere, og sikret os en større mængde data af højere kvalitet. Derudover ville det også have givet os en mulighed for at finde flere folk fra en mere varieret målgruppe, til at sammenligne crowdsourcingdata med.
 
-Fordelene ved at bruge crowdsourcing taler dog klart for at gøre brug af dette. Dog bliver der refereret til services som Amazon Mechanical Turk og CrowdFlower \cite{liu2012crowdsourcing}, der begge er betalingsservices, hvilket har nogle andre fordele og ulemper end vores valg af frivillige testdeltagere. De lave omkostninger, og den hurtige udførsel taler for at vælge betalingsservices, og ville have sikret os en større mængde data. Men vi kan ikke sige om kvaliteten af data havde været bedre, da der ved betalt crowdsourcing bliver et incitament til at gennemføre opgaverne hurtigere grundet Amazon Mechanical Turks betaling per gennemført opgave \cite{liu2012crowdsourcing}.
+Fordelene ved at bruge crowdsourcing taler dog klart for at gøre brug af dette. Dog bliver der refereret til services som Amazon Mechanical Turk og CrowdFlower \cite{liu2012crowdsourcing}, der begge er betalingsservices, hvilket har nogle andre fordele og ulemper end vores valg af frivillige testdeltagere. De lave omkostninger, og den hurtige udførsel taler for at vælge betalingsservices, og ville formentligt have sikret os en større mængde data. Men vi kan ikke sige om kvaliteten af data havde været bedre, da der ved betalt crowdsourcing bliver et incitament til at gennemføre opgaverne hurtigere grundet Amazon Mechanical Turks betaling per gennemført opgave \cite{liu2012crowdsourcing}.
 
 Vores valg af opslagssteder til det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er mand imellem 18 og 29 år\footnote{\href{http://www.pewinternet.org/2013/07/03/6-of-online-adults-are-reddit-users/}, besøgt: 03-06-2015}. Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 257 er mænd.
 
