--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1112,7 +1112,7 @@ Fordelene ved at bruge crowdsourcing taler dog klart for at gøre brug af dette.
 
 Vores valg af opslagssteder til det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er mand imellem 18 og 29 år\footnote{\url{http://www.pewinternet.org/2013/07/03/6-of-online-adults-are-reddit-users/}, besøgt: 03-06-2015}. Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 264 er mænd.
 
-Vores testdata kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, vil vores målgruppe også være begrænset heraf. Vi har for eksempel kun ni testpersoner, som er ældre end 40. Hvis vi skulle undgå dette ville vi være nødt til at lave flere kontrollerede forsøg med aldersgrænse for testdeltagerne, eller bruge crowdsourcing sider, der henvender sig til den ældre befolkningsgruppe.
+Vores testdeltagere kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, vil vores målgruppe også være begrænset heraf. Vi har for eksempel kun ni testpersoner, som er ældre end 40. Hvis vi skulle undgå dette ville vi være nødt til at lave flere kontrollerede forsøg med aldersgrænse for testdeltagerne, eller bruge crowdsourcing sider, der henvender sig til den ældre befolkningsgruppe.
 
 \begin{wrapfigure}{l}{.40\linewidth}
 	\centering
