--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1112,7 +1112,7 @@ Fordelene ved at bruge crowdsourcing taler dog klart for at gøre brug af dette.
 
 Vores valg af opslagssteder til det ukontrollerede forsøg kan have haft en indflydelse på den indsamlede data. Vi valgte at bruge Reddit, hvilket giver os en meget specifik målgruppe, da den typiske Reddit-bruger er mand imellem 18 og 29 år\footnote{\url{http://www.pewinternet.org/2013/07/03/6-of-online-adults-are-reddit-users/}, besøgt: 03-06-2015}. Dette er også udslagsgivende i vores indsamlede data, hvor gennemsnitsalderen er 24.5 år og 233 ud af 264 er mænd.
 
-Vores testdeltagere kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, vil vores målgruppe også være begrænset heraf. Vi har for eksempel kun ni testpersoner, som er ældre end 40. Hvis vi skulle undgå dette ville vi være nødt til at lave flere kontrollerede forsøg med aldersgrænse for testdeltagerne, eller bruge crowdsourcing sider, der henvender sig til den ældre befolkningsgruppe.
+Vores testdeltagere kom ikke kun fra Reddit, men også fra opslag på vores Facebook-væg. Dette medfører også et bias som kan være væsentligt, da det er vores familie og venner vi derved bruger. Familie og venner har ofte hørt om projektet før og kan derfor have en forventning om hvad der skal ske og hvad de burde gøre. Da både Reddit og Facebook hovedsageligt bruges af yngre personer, vil vores målgruppe også være begrænset heraf. Vi har for eksempel kun ni testdeltagere, som er ældre end 40. Hvis vi skulle undgå dette ville vi være nødt til at lave flere kontrollerede forsøg med aldersgrænse for testdeltagerne, eller bruge crowdsourcing sider, der henvender sig til den ældre befolkningsgruppe.
 
 \begin{wrapfigure}{l}{.40\linewidth}
 	\centering
@@ -1128,7 +1128,7 @@ Vores testdeltagere kom ikke kun fra Reddit, men også fra opslag på vores Face
 	\label{tab:times_average}
 \end{wrapfigure}
 
-Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere \cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
+Det er førhen blevet påvist, at folk der spiller computer vil være hurtigere til at gennemføre opgaverne \cite{wyeld2013}. I vores undersøgelse er dette også tilfældet, da tabel \ref{tab:times_average} viser at gennemsnitstiderne for at gennemføre en opgave falder desto mere computer deltageren spiller.
 
 Ligeledes kan der være en væsentlig forskel på tiden, alt efter om testpersonen bruger mus eller touchpad \cite{epps1986}. I vores data brugte 160 testdeltagere mus, imens 96 brugte touchpad. I følge \cite{epps1986} ville dette betyde en forskel i de indbyrdes tider og derved også mindre sammenhæng i dataene. Dette kan medføre et dårligere resultat når vi forsøger at tilpasse vores modeller til hele datasættet. Det kunne derfor have været relevant at foretage en analyse af hhv. mus og touchpad brugere, hver for sig.
 
