--- a/latex/main.tex
+++ b/latex/main.tex
@@ -1102,7 +1102,7 @@ Vi vil i dette afsnit diskutere vores fremgangsmåde og resultater fra både vor
 		Lavere omkostninger & Spammere\\
 		Forskellige baggrunde & Store målgrupper\\
 	\end{tabular}
-	\caption{Tabel med oversigt over fordele og ulemper ved brug af crowdsourcing i forhold til laboratorieforsøg \cite{liu2012crowdsourcing}}
+	\captionof{table}{Oversigt over fordele og ulemper ved brug af crowdsourcing i forhold til laboratorieforsøg \cite{liu2012crowdsourcing}}
 	\label{tab:fordeleogulemper}
 \end{wrapfigure}
 
@@ -1124,7 +1124,7 @@ Vores testdeltagere kom ikke kun fra Reddit, men også fra opslag på vores Face
 		15-40 timer  & 917.7642ms\\
 		$>40$ timer  & 896.4097ms\\
 	\end{tabular}
-	\caption{Tabel med oversigt over testpersoners spilletid, sammenlignet med deres gennemsnitlige gennemførselshastighed af pegeopgaverne}
+	\captionof{table}{Oversigt over testpersoners spilletid, sammenlignet med deres gennemsnitlige gennemførselshastighed af pegeopgaverne}
 	\label{tab:times_average}
 \end{wrapfigure}
 
